Changed project formatting